[package]
name = "snapshot-runner"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diff_utils = { git = "https://github.com/frondeus/diff-assert.git", features = ["display", "patch"] }

glob = "0.3.0"
anyhow = "1.0.40"
regex = "1.5.4"
chrono = "0.4.19"
pulse = "0.5.3"
serde_json = "1.0.64"
serde = "1.0.126"
